Header: Fix z-index overlapping of .site-title
This is a follow up to b94cbee which had the side affect of making
the `.site-title` non-clickable. This fixes the issue by removing
the z-index properties and making the site logo `inline-block` on
wider viewport widths.

--- a/assets/sass/site/_header.scss
+++ b/assets/sass/site/_header.scss
@@ -83,7 +83,6 @@
 
 	@media screen and (min-width: $bp_2) {
 		margin-bottom: 0;
-		z-index: -1;
 	}
 }
 
@@ -94,6 +93,10 @@
 	margin-left: auto;
 	margin-bottom: 0;
 	margin-right: auto;
+
+	@media screen and (min-width: $bp_2) {
+		display: inline-block;
+	}
 }
 
 .site-title a {
